[package]
name = "win64-syscall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemServices",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_Kernel",
    "Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_System_WindowsProgramming",
] }
zero-xxhash = { git = "https://github.com/linxGnu/zero-xxhash" }
win64-syscall-macros = { path = "./macros" }

[profile.dev]
debug-assertions = false
